Some UI fixes and data cleaning, compare before and after text cleaning processes, ce

--- a/frontEnd/src/index.html
+++ b/frontEnd/src/index.html
@@ -19,15 +19,16 @@
 }
 .container {
     background-color: white;
-    box-shadow: 0 0 2px 0 rgb(119 135 147 / 10%), 0 10px 30px 0 rgb(119 135 147 / 10%);
+    box-shadow: 3px 2px 3px 4px rgb(0 0 0 / 0%), 6px 10px 7px 1px rgb(119 135 147 / 10%);
 }
 .h3, h3 {
     font-size: 30px;
-    font-family: -webkit-pictograph;
+    font-family: sans-serif;
     padding-bottom: 30px;
 }
+
 </style>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
